# WideConsole

./: .appveyor.yml  .cicd-config  .clang-format  .clang-tidy  .cmake-format  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt_old  COPYING  INTERFACE.html  INTERFACE.md  README.md  UMLClass.puml  build.sh  clang-tidy.sh  clear.sh  cppcheck.sh  delivery.sh  format-check.sh  format-fix.sh  main.cpp  run-asan.sh  run-tests.sh  sonar-project.properties  unit-tests-coverage.sh
.github/workflows/: actions-develop.yml  actions-release.yml
doc/: INTERFACE.md  INTERFACE.rst  README.md  UMLClass.md  UMLClass.puml  dependencies.puml  interfaces.puml  prism.css  prism.js
include/wconsole/: chart.h  console.h  font.h  graph.h  igrid.h  iheader.h  iobject.h  iprecision.h  irange.h  text.h  types.h
include/wconsole/interface/: ichart.h  iconsolestate.h  iconsoleview.h  igraph.h  igrid.h  iheader.h  interface.h  iobject.h  iprecision1d.h  iprecision2d.h  irange.h  itext.h
include/wconsole/type/: arrow.h  base.h  brickcode.h  charttype.h  color.h  dataposition.h  font.h  gridcode.h  opacity.h  point.h  position.h
include/wconsole/unit/: console.h  consolestate.h  consoleview.h  grid.h  header.h  precision1d.h  precision2d.h  (+1 more)
include/wideconsole/: chart.h  graph.h  text.h
src/: CMakeLists.txt  CMakeLists.txt_old  ForGTest.cpp  ForGTest.hpp  main.cpp
src/wconsole/: chart.h  console.h  font.h  graph.h  igrid.h  iheader.h  iobject.h  iwconsole.h  text.h  types.h
test/: CMakeLists.txt  catch.hpp  tests.cpp
test/component/: CMakeLists.txt  Test.cpp
test/unit/: CMakeLists.txt  TestOne.cpp  TestTwo.cpp
test/unit/tool/: CMakeLists.txt  TestIntSize.cpp
tests/: CMakeLists.txt  test_size.cpp
wconsole/: chart.h  graph.h  igrid.h  iheader.h  iprecision.h  iprint.h  irange.h  iwconsole.h  text.h  types.h
(+43 files in other folders)
